--- a/frontend/src/app/area-adm/pedidos/atualizar-status-pedido/atualizar-status-pedido.scss
+++ b/frontend/src/app/area-adm/pedidos/atualizar-status-pedido/atualizar-status-pedido.scss
@@ -49,23 +49,27 @@ h2 {
   border-radius: 6px;
   text-transform: capitalize;
 }
-
-.status.pendente {
+.status.PENDENTE {
   background: #ffd966;
   color: #8a6d00;
 }
 
-.status.processando {
+.status.PROCESSANDO {
   background: #a6d8ff;
   color: #005b9a;
 }
 
-.status.enviado {
+.status.ENVIADO {
   background: #a4f5a4;
   color: #006400;
 }
 
-.status.cancelado {
+.status.ENTREGUE {
+  background: #c3f5ff;
+  color: #004d4d;
+}
+
+.status.CANCELADO {
   background: #ffb3b3;
   color: #8a0000;
 }
