--- a/frontend/src/app/area-adm/pedidos/visualizar-pedidos/visualizar-pedidos.html
+++ b/frontend/src/app/area-adm/pedidos/visualizar-pedidos/visualizar-pedidos.html
@@ -11,6 +11,7 @@
     <mat-option value="PENDENTE">Pendente</mat-option>
     <mat-option value="PROCESSANDO">Processando</mat-option>
     <mat-option value="ENVIADO">Enviado</mat-option>
+    <mat-option value="ENTREGUE">Entregue</mat-option>
     <mat-option value="CANCELADO">Cancelado</mat-option>
   </mat-select>
 </mat-form-field>
