--- a/frontend/src/app/area-adm/pedidos/atualizar-status-pedido/atualizar-status-pedido.html
+++ b/frontend/src/app/area-adm/pedidos/atualizar-status-pedido/atualizar-status-pedido.html
@@ -7,7 +7,7 @@
   <mat-form-field appearance="outline" class="filtro-status">
     <mat-label>Status do Pedido</mat-label>
     <mat-select [(ngModel)]="statusSelecionado" (selectionChange)="filtrarStatus()">
-      <mat-option value="todos">Todos</mat-option>
+      <mat-option value="TODOS">Todos</mat-option>
       <mat-option value="PENDENTE">Pendente</mat-option>
       <mat-option value="PROCESSANDO">Processando</mat-option>
       <mat-option value="ENVIADO">Enviado</mat-option>
