--- a/frontend/src/app/area-adm/produtos/visualizar-produtos/visualizar-produtos.html
+++ b/frontend/src/app/area-adm/produtos/visualizar-produtos/visualizar-produtos.html
@@ -27,7 +27,7 @@
         <h3>{{ produto.nome }}</h3>
         <p><strong>Artista:</strong> {{ produto.artista }}</p>
         <p><strong>Preço:</strong> R$ {{ produto.preco | number:'1.2-2' }}</p>
-        <p><strong>Gênero Musical:</strong> </p>
+        <p><strong>Gênero Musical:</strong> {{produto.generoMusical.nome}} </p>
         <p><strong>Estoque:</strong> {{ produto.estoque }}</p>
       </div>
     </div>
