--- a/frontend/src/app/produto-info/produto-info.html
+++ b/frontend/src/app/produto-info/produto-info.html
@@ -21,7 +21,9 @@
       <!-- Informações do produto -->
       <div class="column-xs-12 column-md-5">
         <h1>{{ produto.nome }}</h1>
-        <br>
+
+        <h2>{{ produto.artista}}</h2>
+        <br><br>
         <h2>R$ {{ produto.preco?.toFixed(2) || '0.00' }}</h2>
         <div class="description">
           <p>{{ produto.descricao }}</p>
