--- a/frontend/src/app/area-adm/produtos/cadastrar-produto/cadastrar-produto.html
+++ b/frontend/src/app/area-adm/produtos/cadastrar-produto/cadastrar-produto.html
@@ -3,7 +3,7 @@
 <div class="container">
   <h1>Cadastrar Produto</h1>
 
-  <form class="form" (ngSubmit)="onSalvarProduto()">
+  <form #formProduto="ngForm" class="form" (ngSubmit)="onSalvarProduto()">
     <mat-form-field appearance="outline" class="campo">
       <mat-label>Nome do produto</mat-label>
       <input matInput [(ngModel)]="produto.nome" name="nome" required>
@@ -53,7 +53,7 @@
 </div>
 
 <button mat-raised-button class = "button-color" color="primary" type="button" (click)="onSalvarProduto()">
-  Salvar Produto 
+  Salvar Produto
 </button>
 
   </form>
